# data-science-challenge-ML

./: README.md  pyproject.toml
challenge-main/notebooks/: 02_similitud_products.ipynb  03_previsao_falla.ipynb
challenge-main/results/: predictions.csv
challenge-main/src/prevision_falla/: modeling.py
challenge-main/src/similitud_productos/: config.py  similarity.py
challenge-main/tests/: test_similarity_pipeline.py
notebooks/: 02_similitud_products.ipynb  03_previsao_falla.ipynb
src/prevision_falla/: config.py  data_loader.py  data_prep.py  failure.py  main.py
src/similitud_productos/: data_loading.py  main.py
