[tool.poetry]
name = "mercadolibre"
version = "0.1.0"
description = "Dependencies for challenge"
authors = ["Victor Francheto"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "^2.0"
numpy = "^1.24"
matplotlib = "^3.7"
seaborn = "^0.12"
python-slugify = "^8.0"
plotly = "^5.18"
sparse = "^0.17.0"
scikit-learn = "1.3.0"
imbalanced-learn = "0.12.0"
nltk = "^3.9.1"
tqdm = "^4.67.1"
joblib = "^1.5.1"
psutil = "^7.0.0"
optuna = "^4.4.0"

[tool.poetry.group.dev.dependencies]
notebook = "^7.0"
ipykernel = "^6.29"
pytest = "^8.4.1"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

